# giga-db

./: .env  .gitignore  Cargo.toml  README.md
crates/db_client/: Cargo.toml
crates/db_client/src/: lib.rs
crates/db_common/: Cargo.toml
crates/db_common/src/: lib.rs
crates/db_coordinator/: Cargo.toml
crates/db_coordinator/src/: lib.rs
crates/db_metadata/: Cargo.toml
crates/db_metadata/src/: lib.rs
crates/db_sql/: Cargo.toml
crates/db_sql/src/: lib.rs
crates/db_storage/: Cargo.toml
crates/db_storage/src/: lib.rs
crates/db_worker/: Cargo.toml
crates/db_worker/src/: lib.rs
metadata.db/: 000008.sst  000013.sst  000018.sst  000023.sst  000030.sst  000035.sst  000040.sst  IDENTITY  LOG  LOG.old.1734742050516846  LOG.old.1734742198010051  LOG.old.1734742208866438  LOG.old.1734742337219915  LOG.old.1734742431267629  LOG.old.1734742437957442  LOG.old.1734742920057213  MANIFEST-000042
src/: main.rs  s3_utils.rs
