[package]
name = "db_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
db_common = { path = "../db_common" }
db_storage = { path = "../db_storage"}
db_sql = { path = "../db_sql"}
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
wgpu = "23.0.1"
futures = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
